--- a/app/globals.css
+++ b/app/globals.css
@@ -64,6 +64,14 @@ body {
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 } */
 
+h2 {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 0 0 16px 0;
+
+  padding: 0;
+}
 a {
   color: inherit;
   text-decoration: none;
