--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+button {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
