--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,7 @@
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  -webkit-tap-highlight-color: transparent;
   user-select: none;
 }
 
